--- a/assets/style.css
+++ b/assets/style.css
@@ -17,7 +17,7 @@ h1 {
 .jumbotron {
         background-image: url('https://sa1s3optim.patientpop.com/assets/images/provider/photos/2138869.jpg');
         background-size: cover;
-        height: 50%;}
+        height: 50%;
 }
 
 .navbar-brand {
@@ -53,3 +53,4 @@ h1 {
     padding-top: 50px;
     display: inline-block;
 }
+
